buildscript {
	repositories {
		mavenCentral()
	}
	configurations.maybeCreate('pitest')
	dependencies {
		pitest 'org.pitest:pitest-junit5-plugin:0.12'
	}
}

plugins {
	id 'info.solidsoft.pitest'
}

apply plugin: 'java'
apply plugin: 'jacoco'

group = 'com.ceiba'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '8'

repositories {
	mavenCentral()
}

dependencies {
	testImplementation project.ext.springboottest
	testImplementation project.ext.mockitocore
	testImplementation project.ext.mockitoinline
	testImplementation project.ext.mockitojupiter
//	testImplementation project(':comun:comun-test')

	implementation project(':comun:comun-dominio')

	compileOnly project.ext.lombok
	annotationProcessor project.ext.lombok
	implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.6.4'
	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.6.4'
	implementation group: 'org.springframework', name: 'spring-web', version: '5.3.19'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.6.6'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'

}

pitest {
	testPlugin = 'junit5'
	junit5PluginVersion = '0.14'
	testSourceSets = [sourceSets.test]
	mainSourceSets = [sourceSets.main]
	useClasspathFile = true
}

jacocoTestReport {
	reports {
		xml.enabled true
		html.enabled true
	}
	additionalSourceDirs files("../aplicacion/src/main/java")
	additionalClassDirs files("../aplicacion/build/classes/java/main")
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}